--- a/roles/fireactions/templates/config.yaml.j2
+++ b/roles/fireactions/templates/config.yaml.j2
@@ -1,3 +1,3 @@
 {{ ansible_managed | comment }}
 
-{{ fireactions_config | to_nice_yaml(indent=2) }}
+{{ fireactions_config | to_nice_yaml(indent=2, sort_keys=False) }}
