fix(roles/fireactions): Set systemd service KillMode=process

--- a/roles/fireactions/templates/fireactions.service.j2
+++ b/roles/fireactions/templates/fireactions.service.j2
@@ -6,6 +6,7 @@ After=network.target
 [Service]
 User={{ fireactions_owner }}
 Type=simple
+KillMode=process
 ExecStartPre=/usr/bin/which firecracker
 ExecStartPre=/usr/bin/which containerd
 ExecStart=fireactions server --config {{ fireactions_config_file_path }}
